include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(testbase)
add_subdirectory(testfibers)
add_subdirectory(testfoundation)
add_subdirectory(testrender)
add_subdirectory(mathtest)
add_subdirectory(testwin32)
add_subdirectory(testgame)
add_subdirectory(testjobs)
add_subdirectory(testvisibility)
add_subdirectory(testmisc)
add_subdirectory(benchmarks)
add_subdirectory(threadstresstest)
#add_subdirectory(testflatc)
#add_subdirectory(testgltf)
add_subdirectory(testviewer)
add_subdirectory(testscript)
add_subdirectory(testaddon)
add_subdirectory(testnsharp)
