include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(attr)
add_subdirectory(audiofeature)
add_subdirectory(db)
add_subdirectory(dynui)
add_subdirectory(graphicsfeature)
add_subdirectory(memdb)
add_subdirectory(nflatbuffer)
add_subdirectory(physicsfeature)
add_subdirectory(scripting)
add_subdirectory(staticui)
add_subdirectory(tinyxml)
add_subdirectory(nsharp)
